--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/cookie": "^0.6.0",
+    "@types/cookie-signature": "^1.1.2",
+    "@types/multer": "^1.4.12",
     "@uiw/react-codemirror": "^4.23.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
